# ci-templates

./: .gitignore
.github/workflows/: rust-android-app.yml
bevy-android-test/: .gitignore  BEVY_0_17_COMPATIBILITY.md  Cargo.toml
bevy-android-test/src/: lib.rs  main.rs  shapes_demo.rs
